# anchor_hello

./: .dockerignore  Anchor.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
programs/anchor_hello/: Cargo.toml
programs/anchor_hello/src/: lib.rs
tests/: anchor_hello.ts
