[package]
name = "anchor_hello"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_hello"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bytemuck = "1.19.0"
anchor-lang = {version = "0.30.1", features = ["derive", "init-if-needed"]}
anchor-spl = "0.30.1"
solana-program = "2.1.5"

[dev-dependencies]
litesvm = {git = "https://github.com/litesvm/litesvm"}
test-log = "0.2.16"
anyhow = "1.0.71"
solana-sdk = "2.1.5"
litesvm-token = {git = "https://github.com/litesvm/litesvm"}
borsh = "0.10.3"
rand = "0.8.5"